# pseek

./: README.md  pyproject.toml
.github/workflows/: publish.yml
pseek/: archive.py  cli.py  compound_extensions  parser.py  searcher.py  utils.py
scripts/: check_version.py
