[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pseek"
version = "3.0.2"
description = "Pseek is a Python CLI toolkit to search files, folders, and text"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Groot"}
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1,<9",
    "lark>=1.2,<2",
    "py7zr>=1.0.0,<2",
    "rarfile>=4.2,<5",
    "rapidfuzz>=3.13.0,<4"
]
keywords = [
    "search",
    "cli",
    "filesystem",
    "text-search",
    "grep",
    "find",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/grootle/pseek"
Repository = "https://github.com/grootle/pseek"
Issues = "https://github.com/grootle/pseek/issues"

[project.scripts]
psk = "pseek.cli:search"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"pseek" = ["compound_extensions"]
